--- a/src/main/resources/templates/userboardCollection.html
+++ b/src/main/resources/templates/userboardCollection.html
@@ -16,52 +16,17 @@
 <header class="bg-white shadow">
   <div class="container mx-auto px-4 py-4 flex justify-between items-center">
     <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70"
-         height="70" alt="Logo" class="mr-4">
+         height="70" alt="Logo" class="mr-4" href="/main">
     <nav class="space-x-4">
-      <a href="#" class="text-gray-700">내 주변 모임</a>
-      <a href="#" class="text-gray-700">My Page</a>
+      <a href="/public/meetsCollection" class="text-gray-700">내 주변 모임</a>
+      <a href="/public/MyPage" class="text-gray-700">My Page</a>
     </nav>
     <button class="bg-black text-white px-4 py-2 rounded" id="logoutButton">로그아웃</button>
   </div>
 </header>
 <main class="container mx-auto px-4 py-8">
   <div class="text-center mb-8">
-    <h1 class="text-3xl font-bold">내 페이지/다른 사람 페이지</h1>
-  </div>
-  <div class="bg-white shadow rounded-lg p-8">
-    <div class="flex items-center mb-8">
-      <img id="profilePicture" src="https://source.unsplash.com/random/100x100" alt="Profile Picture" class="w-24 h-24 rounded-full mr-4">
-      <div>
-        <h2 id="profileName" class="text-xl font-bold">불광동 철리지역</h2>
-        <p id="profileLocation" class="text-gray-600">서울</p>
-      </div>
-    </div>
-    <div class="mb-8">
-      <p class="text-center text-xl font-bold mt-4">메시지</p>
-    </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8">
-      <div>
-        <label class="block text-gray-700">지역</label>
-        <input id="profileRegion" type="text" class="w-full border border-gray-300 rounded px-4 py-2" value="서울">
-      </div>
-      <div>
-        <label class="block text-gray-700">생년월일</label>
-        <input id="profileBirth" type="text" class="w-full border border-gray-300 rounded px-4 py-2" value="980925">
-      </div>
-      <div>
-        <label class="block text-gray-700">취미</label>
-        <input id="profileHobby" type="text" class="w-full border border-gray-300 rounded px-4 py-2" value="전북 익산에서 소주에 고기 한점">
-      </div>
-      <div>
-        <label class="block text-gray-700">MBTI</label>
-        <input id="profileMbti" type="text" class="w-full border border-gray-300 rounded px-4 py-2" value="ESTP">
-      </div>
-      <div class="col-span-2">
-        <label class="block text-gray-700">본인 소개</label>
-        <textarea id="profileDescription" class="w-full border border-gray-300 rounded px-4 py-2">헬로우에서 좋은 모임을 갖고 싶은 사람입니다.</textarea>
-      </div>
-    </div>
-    <button class="bg-black text-white px-4 py-2 rounded" id="updateButton">수정</button>
+    <h1 class="text-3xl font-bold">오늘의 동친</h1>
   </div>
   <div class="mt-8">
     <h2 class="text-2xl font-bold mb-4">사진첩</h2>
