--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -215,7 +215,7 @@
             success: function (response) {
                 alert('회원가입이 완료되었습니다.');
                 localStorage.setItem("username", username);
-                window.location.href = '/register_information';
+                window.location.href = '/public/register_information';
             },
             error: function (xhr, status, error) {
                 alert('회원가입에 실패했습니다. 다시 시도해주세요.');
