--- a/src/main/resources/templates/MyPage.html
+++ b/src/main/resources/templates/MyPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"><head>
+  <script src="/js/auth.js" defer></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile Page</title>
@@ -156,27 +157,6 @@
       });
     });
 
-    document.getElementById('logoutButton').addEventListener('click', function () {
-      fetch('/users/logout', {
-        method: 'POST',
-        headers: {
-          'Authorization': accessToken,
-          'Content-Type': 'application/json'
-        },
-      })
-      .then(response => response.json())
-      .then(responseData => {
-        if (responseData.statusCode === 200) {
-          alert('성공적으로 로그아웃 되었습니다.');
-          window.location.href = '/';
-        } else {
-          alert('로그아웃에 실패했습니다.');
-        }
-      })
-      .catch(error => {
-        console.error('Error logging out:', error);
-      });
-    });
   document.addEventListener('DOMContentLoaded', function() {
     const profileRegion = document.getElementById('profileRegion');
     const regionDropdown = document.getElementById('regionDropdown');
