fix : 토큰 안담기는것, securityconfig에 주소추가(인가허용)

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -147,6 +147,7 @@
 <script type="module">
     document.addEventListener('DOMContentLoaded', function() {
         const accessToken = localStorage.getItem('Authorization');
+        console.log("어쩌구", accessToken)
         if (!accessToken) {
             window.location.href = '/login';
             return;
