Changes by wonha

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -133,6 +133,7 @@
   }
 
   function createChatRoom() {
+    console.log("asdfasdf");
     const roomName = prompt("새 채팅방 이름을 입력하세요:");
     if (roomName) {
       fetch('/api/chat/rooms', {
