url 이동 수정 및 레이아웃 수정

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -70,8 +70,9 @@
 <body class="bg-gray-100 text-black">
 <header class="flex justify-between items-center p-4 bg-white shadow">
     <div class="flex items-center">
-        <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70"
-             height="70" alt="Logo" class="mr-4">
+        <a href="/public/main">
+            <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70" height="70" alt="Logo" class="mr-4">
+        </a>
         <nav>
             <a href="/public/userboardCollection" class="mr-4">오늘의 동친</a>
             <a href="/public/meetsCollection" class="mr-4">내 주변 모임</a>
