--- a/src/main/resources/templates/meetsCollection.html
+++ b/src/main/resources/templates/meetsCollection.html
@@ -16,20 +16,16 @@
 </head>
 <body class="bg-gray-100 text-gray-900">
 <header class="bg-white shadow-md">
-  <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-    <div class="flex items-center space-x-4">
-      <img src="https://via.placeholder.com/100x50?text=Piallow" alt="Piallow Logo" class="h-10">
+    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+      <a href="/public/main">
+        <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70" height="70" alt="Logo" class="mr-4">
+      </a>
       <nav class="space-x-4">
-        <a href="#" class="text-gray-700 hover:text-gray-900">오늘의 동친</a>
-        <a href="#" class="text-gray-700 hover:text-gray-900">내 주변 모임</a>
+        <a href="/public/userboardCollection" class="text-gray-700">오늘의 동친</a>
+        <a href="/public/meetsCollection" class="text-gray-700">내 주변 모임</a>
       </nav>
+      <button class="bg-black text-white px-4 py-2 rounded" id="logoutButton">로그아웃</button>
     </div>
-    <div class="space-x-4">
-      <a href="#" class="text-gray-700 hover:text-gray-900">내페이지</a>
-      <a href="#" class="text-gray-700 hover:text-gray-900">프로필</a>
-      <button class="bg-black text-white px-4 py-2 rounded">로그아웃</button>
-    </div>
-  </div>
 </header>
 <main class="container mx-auto px-4 py-8">
   <div class="flex justify-between items-center mb-8">
