--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -141,13 +141,8 @@
         <span class="text-xs mt-1">Chat</span>
     </button>
     <button id="goToIndexBtn">test Button</button>
-    <button id="testButton">테스트 모임 버튼</button>
 </footer>
-
-
 <script type="module">
-
-
     document.addEventListener('DOMContentLoaded', function () {
         const accessToken = localStorage.getItem('Authorization');
         if (!accessToken) {
@@ -164,15 +159,11 @@
             return fetch(url, options);
         }
 
-        //TODO : 클릭한 모임 ID 를 아래 meetId 로 넘겨줘야합니다. 현재는 테스트를 위해 메인페이지에 버튼을 만들었고, 해당 버튼을 클릭시 가입신청 목록창을 새롭게 띄우도록 해놨습니다.
-        document.getElementById('testButton').addEventListener('click', async () =>
-            window.open(`http://localhost:8080/InvitationList.html?meetId=1`, '신청 목록', `width=800,height=600,top=${(screen.height - 600) / 2},left=${(screen.width - 800) / 2}`))
-
         document.getElementById('goToIndexBtn').addEventListener('click', async () => {
             try {
-                const response = await fetchWithAuth('/index.html');
+                const response = await fetchWithAuth('/meets.html');
                 if (response.ok) {
-                    window.location.href = '/index.html'; // This will redirect the user to index.html
+                    window.location.href = '/meets.html'; // This will redirect the user to index.html
                 } else {
                     console.error('Failed to load index.html');
                 }
