--- a/src/main/resources/templates/register_information.html
+++ b/src/main/resources/templates/register_information.html
@@ -102,7 +102,7 @@
         <div class="profile-pic mr-4" id="profilePic">
           <img src="https://github.com/user-attachments/assets/bce3db08-6dfc-4ccb-b3dd-38d75a465955" alt="Default Profile Image">
         </div>
-        <input type="file" id="photoInput" name="photo"
+        <input type="file" id="photoInput" name="image"
                class="block w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-indigo-50 file:text-indigo-700 hover:file:bg-indigo-100">
       </div>
     </div>
